update application files and tools
